# pooii-tarea-4-entrega-20-05-otreblan

./: CMakeLists.txt  README.md
.github/workflows/: ccpp.yml
include/: problems.hpp  templates.hpp
src/: CMakeLists.txt  main.cpp  problems.cpp
